# TAGCAR

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yaml
assets/: sources.md
controller/: Cargo.toml
controller/src/: lib.rs
examples/: driving.rs
examples/driving/: Cargo.toml
examples/driving/src/: main.rs
plugins/audio-fx/: Cargo.toml
plugins/audio-fx/src/: lib.rs
plugins/bg-music/: Cargo.toml
plugins/bg-music/src/: lib.rs
plugins/bot-controller/: Cargo.toml
plugins/bot-controller/src/: lib.rs
plugins/camera/: Cargo.toml
plugins/camera/src/: lib.rs
plugins/car/: Cargo.toml
plugins/car/src/: car.rs  graphics.rs  lib.rs  physics.rs  wheel.rs
plugins/controller/: Cargo.toml
plugins/controller/src/: lib.rs
plugins/entropy/: Cargo.toml
plugins/entropy/src/: lib.rs
plugins/laptag/: Cargo.toml
plugins/laptag/src/: graphics.rs  lib.rs  particles.rs
plugins/resurfacer/: Cargo.toml
plugins/resurfacer/src/: entropy.rs  graphics.rs  lib.rs
plugins/scoreboard/: Cargo.toml
plugins/scoreboard/src/: lib.rs
plugins/slowmo/: Cargo.toml
plugins/slowmo/src/: lib.rs
plugins/track/: Cargo.toml
plugins/track/src/: graphics.rs  lib.rs
src/: game_loop.rs  lib.rs  main.rs
wasm/: index.html
