[workspace]
members = ["plugins/*"]
resolver = "2"

[workspace.dependencies]
# plugins
car = { path = "plugins/car" }
controller = { path = "plugins/controller" }
track = { path = "plugins/track" }
resurfacer = { path = "plugins/resurfacer" }
slowmo = { path = "plugins/slowmo" }

# bevy
avian2d = { version = "0.1" }
bevy = { version = "0.14", default-features = false }
bevy_anyhow_alert = "0.3"
bevy-inspector-egui = "0.25"
bevy_prng = { version = "0.7", features = ["wyrand"] }
bevy_rand = { version = "0.7", features = ["wyrand"] }
bevy_reactive_blueprints = { git = "https://github.com/snendev/bevy-reactive-blueprints" }
bevy_rts_camera = { git = "https://github.com/snendev/bevy_rts_camera_2d" }
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui", rev = "2f2fae9" }

# stdx
anyhow = "1.0"
rand_core = { version = "0.6" }
simple-easing = { version = "1.0" }
thiserror = "1.0"

[package]
name = "tagcar"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = ["dep:bevy-inspector-egui", "avian2d/debug-plugin"]

[dependencies]
# plugins
car = { workspace = true, features = ["graphics"] }
controller = { workspace = true }
resurfacer = { workspace = true, features = ["graphics"] }
track = { workspace = true, features = ["graphics"] }
slowmo = { workspace = true }

# bevy
avian2d = { workspace = true }
bevy = { workspace = true, default-features = true }
bevy_reactive_blueprints = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }

# stdx
