[package]
name = "bot_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { workspace = true }
bevy = { workspace = true, features = ["bevy_gizmos"] }
car = { workspace = true }
entropy = { workspace = true }
laptag = { workspace = true }
resurfacer = { workspace = true }
track = { workspace = true }
