[package]
name = "track"
version = "0.1.0"
edition = "2021"

[features]
default = []
graphics = ["dep:bevy_asset_loader"]

[dependencies]
avian2d = { workspace = true }
bevy = { workspace = true }
bevy_reactive_blueprints = { workspace = true }
bevy_asset_loader = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, features = [
    # default-features excluding audio, vorbis
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
